# Course_Work-4

./: .coverage  .gitignore  README.md  main.ru.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_class_json_py.html  z_145eef247bfb46b6_hh_api_py.html  z_145eef247bfb46b6_vacancy_py.html
src/: class_json.py  hh_api.py  vacancy.py
tests/: test_class_json.py  test_hh_api.py  test_vacancy.py
