[tool.poetry]
name = "pyproject-toml"
version = "0.1.0"
description = ""
authors = ["Alexsandr Varenyshev <warrn11@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
